<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SQLite Database</string>
    <string name="total_num_usr">Total number of Users: </string>



    <string name="action_settings">Settings</string>
    <string name="record_reaction_time">record reaction time</string>
    <string name="cross_hair_description">focus point for visual reflex test</string>
    <string name="visual_stimulus_description">visual stimulus for visual reflex test</string>
    <string name="action_start">Start Session</string>
    <string name="action_view_overall">View Overall</string>
    <string name="action_cancel">Cancel Session</string>
    <string name="toast_start_session">Session starting in 4 seconds</string>
    <string name="title_activity_patient_summary">Summary</string>
    <string name="saved_date_time">Session date and time record</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_numOfStimuli">Number of Stimuli per Session</string>
    <string name="pref_timeBetweenStimuli">Range of Seconds between Stimuli</string>
    <string name="pref_timeBetweenStimuli_default">1000</string>
    <string name="pref_numOfStimuli_default">28</string>
    <string name="tab_name_mostRecentSessions">Recent</string>
    <string name="tab_name_averageAcrossSessions">Overall</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>
    <string name="pref_test_config_title">Reaction Time Test Preferences</string>
    <string name="company_name_complete">BroadSense Technology</string>
    <string name="title_activity_reaction_test">Reaction Time Test</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="save_session_data">Session ended. Save Session data?</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="confirm_discard">Confirm discard?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_help_activity">Help and Instructions</string>
    <string name="desc_list_item_icon">List item icon</string>
    <string name="session_status">Session Status</string>
    <string name="session_status_description">indication of session status</string>
    <string name="subject_ID_description">Current test User ID identifier.</string>
    <string name="subject_ID">Current User ID</string>
    <string name="createSubjectBtn">Create New User</string>
    <string name="lastNameHint">Last Name: (optional)</string>
    <string name="firstNameHint">First Name: (optional)</string>
    <string name="subjectIdHint">User ID: (required)</string>
    <string name="current_subject_ID">Current User ID: </string>
    <string name="press_play">Press Play to Start New Session</string>
    <string name="title_activity_sub_patient_summary">Overall Results</string>
    <string name="title_activity_subject_info">User Info and Data</string>
    <string name="action_discard">Delete User</string>
    <string name="title_activity_session_info">Session Data</string>
    <string name="notice_no_sessions">Please Take a Test Session to See Summary.</string>
    <string name="notice_no_subjects">Please Create a User under Users menu option.</string>
    <string name="app_summary">Welcome to the MSI Quantifier: BroadSense Technology\'s proof of concept in a an effort to bring new research and diagnostic tools to everyone.</string>
    <string name="viewPatientSummarySubjectBtn">View Summary</string>
    <string name="takeTestBtn">New Session</string>
    <string name="title_activity_home_panel">Home</string>
    <string name="title_activity_questionnaire">Questionnaire</string>
    <string name="question_header">How often does this individual...</string>
    <string name="q_category_audio">Auditory Questions</string>
    <string name="q_category_visual">Visual Questions</string>
    <string name="q_category_tactile">Tactile Questions</string>
    <string name="q_category_tri">Trisensory Questions</string>
    <string name="question_1_audio">notice sounds in the environment (such as planes, trains, or thunder in the distance) before other people do?</string>
    <string name="question_2_audio">ignore or tune-out loud noises? (For example: Don\'t react when alarms go off or objects fall to the floor.</string>
    <string name="question_3_audio">seem fascinated with sounds?</string>
    <string name="question_4_audio">ignore when name is called?</string>
    <string name="question_5_audio">have trouble distinguishing between different types of sounds?</string>
    <string name="question_1_visual">stare at lights or objects that spin or move?</string>
    <string name="question_2_visual">seem fascinated with lights?</string>
    <string name="question_3_visual">seem slow to notice new objects in the room?</string>
    <string name="question_4_visual">seem slow to look at objects that are placed or held nearby?</string>
    <string name="question_5_visual">seem visually distracted by every little thing moving around nearby?</string>
    <string name="question_1_tactile">ignore or not notice when taped on the shoulder for attention?</string>
    <string name="question_2_tactile">seem fascinated with touch?</string>
    <string name="question_3_tactile">seem slow to react to pain? (For example: aren\'t bothered by bumps, scrapes, cuts, or falls.)</string>
    <string name="question_4_tactile">seem fascinated with textures or surfaces, objects or clothing fabrics?</string>
    <string name="question_5_tactile">have trouble distinguishing between different types of touch sensations?</string>
    <string name="question_1_tri">seem to have trouble looking and listening at the same time? (For example: Shut eyes to listen more closely or blocks out sound to focus on visual task.)</string>
    <string name="question_2_tri">seem to confuse which sense something is coming from? (For example: Turn up the volume if something is blocking the view of the TV.)</string>
    <string name="question_3_tri">seem more sensitive to social touch (such as a pat on the back, touch on the arm, or hug) in a noisy environment than in a quiet one?</string>
    <string name="question_4_tri">avoid playing or interacting with objects that make a lot of noise and light up at the same time?</string>
    <string name="question_5_tri">have trouble focusing on a conversation or social activity when other sounds are happening in the room at the same time?</string>
    <string name="answer_never">Never/Almost Never</string>
    <string name="answer_once_in_while">Once in a While</string>
    <string name="answer_sometimes">Sometimes</string>
    <string name="answer_frequently">Frequently</string>
    <string name="answer_always">Almost Always/Always</string>
    <string name="question_instructions">Touch Questions to See Selection of Answers</string>
    <string name="question_nav_swipe">Swipe to Continue</string>
    <string name="question_nav_done">Done (Press Back Button to Return)</string>
    <string name="title_activity_flash_illusion">Flash Illusion Test</string>
    <string name="question_num_flashes">How many flashes seen?</string>
    <string name="welcome_screen_link_one">MEASURE</string>
    <string name="welcome_screen_link_two">ANSWER</string>
    <string name="welcome_screen_link_three">REVIEW</string>
    <string name="slideshow_caption_one">How do you interact with your world?</string>
    <string name="slideshow_caption_two">How do you respond to change?</string>
    <string name="slideshow_caption_three">How do you blend your senses?</string>
    <string name="choose_test">CHOOSE AN ASSESSMENT</string>
    <string name="welcome_screen_flash_illusion_test">FLASH ILLUSION TEST</string>
    <string name="welcome_screen_questionnaire_test">SENSE QUESTIONNAIRE</string>
    <string name="welcome_screen_reaction_test">REACTION TIME TEST</string>
    <string name="disclaimer_title">DISCLAIMER</string>
    <string name="drawer_title_welcome">Welcome</string>
    <string name="drawer_title_reaction_test">Reaction Time Test</string>
    <string name="drawer_title_flash_test">Flash Illusion Test (Demo)</string>
    <string name="drawer_title_questionnaire">Sense Questionnaire (Demo)</string>
    <string name="drawer_title_summary">R.T. Summary</string>
    <string name="drawer_title_users">Users</string>
    <string name="drawer_title_settings">Settings</string>
    <string name="drawer_title_about">About</string>
    <string name="select_user_instructions">Select user below to change current test subject</string>
    <string name="menu_tests_title">Assessments</string>
    <string name="flash_illusion_instructions">Once the session starts, please focus on the crosshair at the top of the screen. A randomly selected stimulus will play for you below. After every sensory stimuli execution, you will be asked how many flashes you perceived to have seen. Select the number seen and press continue to go on to the next stimuli sequence until you reach the end.</string>
    <string name="action_view_summary">View Summary</string>
    <string name="react_time_test_instructions">Once the session starts, please focus on the crosshair at the top of the screen. At set intervals, a randomly selected sensory stimuli will execute. You will see, hear, or feel a stimuli individually or in combination with one or two others. Press the red react button as soon as you sense any of the stimuli. Continue to do so until a save data screen appears. If you feel your performance was at its best and you were uninterrupted during testing, save your data to view a comprehensive sense integration summary.</string>
    <string name="flash_illusion_question">How many flashes did you see?</string>
    <string name="ageHint">Age: (required)</string>
    <string name="testingGroupHint">Testing Group: (optional)</string>
    <string name="commentsHint">Comments: (optional)</string>
    <string name="sessionEnded">Session Ended</string>
    <string name="sessionInProgress">Session In Progress</string>
    <string name="sessionCancelled">Session Cancelled</string>
    <string name="pressPlayButton">Press Play to Start New Session</string>
    <string name="sessionSaved">Session Saved</string>
    <string name="sessionDiscarded">Session Discarded. Please Start New Session</string>


</resources>
