<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:paddingBottom="3dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=" Total Number of Subjects: "
        android:id="@+id/subjectsTotal"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/primary_text_light"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:gravity="center" />

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view1"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="4dp"
        card_view:cardCornerRadius="@dimen/card_corner_radius"
        android:layout_margin="5dp" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextSubjectID"
                android:hint="@string/subjectIdHint"
                android:inputType="number"
                android:ems="10"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextFirstName"
                android:inputType="textPersonName|textCapWords"
                android:hint="@string/firstNameHint"
                android:ems="10"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextLastName"
                android:inputType="textPersonName|textCapWords"
                android:hint="@string/lastNameHint"
                android:ems="10" />

            <Button
                android:id="@+id/createSubjectBtn"
                android:text="@string/createSubjectBtn"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_user_instructions"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/primary_text_light"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:gravity="center" />
    <ListView
        android:id="@+id/listViewSubjects"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="false"
        android:drawSelectorOnTop="true"
        android:choiceMode="singleChoice"
        android:listSelector="#45848484" />

</LinearLayout>